Better layout imilar to algoprog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+  <div class="main-container">
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
@@ -41,10 +42,11 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {% include svg-icons.html %}
+          ⓒ Петр Калинин, CC-BY-SA, <a href="//github.com/petr-kalinin/algoprog">github.com/petr-kalinin/algoprog</a>
         </footer>
       </div>
     </div>
+  </div>
 
     {% include analytics.html %}
   </body>
