--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,10 @@ html {
   font-size: 100%;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
 	background: $white;
   font: 18px/1.4 $helvetica;
@@ -69,11 +73,11 @@ p {
 }
 
 a {
-  color: $blue;
+  color: $link;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    color: $link;
   }
 }
 
@@ -152,11 +156,14 @@ img {
 
 .wrapper-masthead {
   margin-bottom: 50px;
+  background-color: #f8f8f8;
+  border-bottom: 1px solid #e7e7e7;
 }
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+
+  background-color: #f8f8f8;
 
   @include mobile {
     text-align: center;
@@ -182,6 +189,7 @@ img {
 
 .site-info {
   float: left;
+  margin-top:9px;
 
   @include mobile {
     float: none;
@@ -216,6 +224,7 @@ nav {
   font-family: $helveticaNeue;
   font-size: 18px;
 
+   
   @include mobile {
     float: none;
     margin-top: 9px;
@@ -232,7 +241,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: $link;
     }
   }
 }
@@ -275,7 +284,7 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  background-color: #f5f5f5;
 }
 
 footer {
@@ -283,7 +292,18 @@ footer {
   text-align: center;
 }
 
+
+.main-container {
+  display: flex;
+  min-height: 100%;
+  flex-direction: column;
+}
+
+#main {
+  flex: 1;
+  padding-bottom: 10px;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
-@import "svg-icons";
