Add link to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          ⓒ Петр Калинин, CC-BY-SA, <a href="//github.com/petr-kalinin/algoprog">github.com/petr-kalinin/algoprog</a>
+          <a href="//blog.algoprog.ru">blog.algoprog.ru</a> ⓒ Петр Калинин, CC-BY-SA, <a href="//github.com/petr-kalinin/algoprog">github.com/petr-kalinin/algoprog</a>
         </footer>
       </div>
     </div>
