--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ html, body {
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.4 $helveticaNeue;
   color: $darkGray;
 }
 
