Added rss to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/> 
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -43,6 +44,9 @@
       <div class="container">
         <footer class="footer">
           <a href="//blog.algoprog.ru">blog.algoprog.ru</a> © Петр Калинин, <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA</a>, <a href="//github.com/petr-kalinin/algoprog">github.com/petr-kalinin/algoprog</a>
+          <span class="footer-right">
+            <a href="{{ site.baseurl }}/feed.xml"><i class="fa fa-rss-square" aria-hidden="true"></i></a>
+          </span>
         </footer>
       </div>
     </div>
