Added vk comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,5 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
-  {% include disqus.html %}
+  {% include vk-comments.html %}
 </article>
