--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -3,15 +3,28 @@
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
-  overflow: scroll;
+  overflow: auto;
+}
+
+.highlight .highlight {
+  padding: 0px 0px 0px 0px;
+  border: 0px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  margin: 0px 0 0px 0;
+  overflow: visible;
+}
+
+.highlight code {
+  padding: 0px 0px 0px 0px;
 }
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  background-color: #efefef;
+  padding: 3px 3px 3px 3px;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
