--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          <a href="//blog.algoprog.ru">blog.algoprog.ru</a> © Петр Калинин, <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA</a>, <a href="//github.com/petr-kalinin/algoprog">github.com/petr-kalinin/algoprog</a>
+          <a href="//blog.algoprog.ru">blog.algoprog.ru</a> © Петр Калинин, <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA</a>, <a href="//github.com/petr-kalinin/algoprog-blog">github.com/petr-kalinin/algoprog-blog</a>
+          |&nbsp;<a href="//algoprog.ru">algoprog.ru</a>
           <span class="footer-right">
             <a href="{{ site.baseurl }}/feed.xml"><i class="fa fa-rss-square" aria-hidden="true"></i></a>
           </span>
