Fixed table style

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,3 +16,10 @@ body {
 .panel-heading a {
     cursor: pointer;
 }
+table {
+    width: 100%;
+    border-top: 1px solid #888888;
+}
+tr, th {
+    border-bottom: 1px solid #888888;
+}
