--- a/style.scss
+++ b/style.scss
@@ -305,6 +305,10 @@ footer {
   padding-bottom: 10px;
 }
 
+code {
+    white-space: pre;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
